# StreamDeckMem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Source/: IRamUsage.h  MemPlugin.cpp  MemPlugin.h
Source/Windows/: WindowsRamUsage.cpp  WindowsRamUsage.h
Source/com.nthompson.ram.sdPlugin/: en.json  manifest.json
